@@ -1,5 +1,5 @@
-/* Copyright (C) 2001, 2002, 2003, 2004, 2005, 2006, 2007, 2009, 2010, 2011
-   Red Hat, Inc.
+/* Copyright (C) 2001, 2002, 2003, 2004, 2005, 2006, 2007, 2009, 2010, 2011,
+   2013 Red Hat, Inc.
    Written by Jakub Jelinek <jakub@redhat.com>, 2001.
 
    This program is free software; you can redistribute it and/or modify
@@ -100,6 +100,10 @@
 #ifndef R_PPC64_JMP_IREL
 #define R_PPC64_JMP_IREL	247
 #define R_PPC64_IRELATIVE	248
+#endif
+
+#ifndef R_390_IRELATIVE
+#define R_390_IRELATIVE		61
 #endif
 
 struct prelink_entry;
